完成聊天记录和聊天快照删除

--- a/ChatFront/pages/bird-chatlist.html
+++ b/ChatFront/pages/bird-chatlist.html
@@ -150,6 +150,22 @@
 					loadingChatSnapshot();
 				});
 
+				//左滑删除聊天快照和记录
+				mui("#ul_chatSnapshot").on("tap","#link_delChatRecord",function(){
+					var me = this;
+					var user = app.getUserGlobalInfo();
+					//获取朋友id
+					var friendUserId = me.getAttribute("friendUserId");
+					//删除聊天记录
+					app.deleteUserChatHistory(user.id,friendUserId);
+					//删除聊天快照
+					app.deleteUserChatSnapshot(user.id,friendUserId);
+					//移除当前用户操作的li节点
+					var li = me.parentNode.parentNode;
+					var ul_chatSnapshot = document.getElementById("ul_chatSnapshot");
+					ul_chatSnapshot.removeChild(li);
+				})
+
 			})
 
 			window.CHAT = {
