--- a/ChatFront/pages/bird-chatting.html
+++ b/ChatFront/pages/bird-chatting.html
@@ -20,6 +20,14 @@
 			html {
 				touch-action: none;
 			}
+
+			#friend-details{
+				font-size: 16px;
+				position: absolute;
+				right: 5%;
+				top:20%;
+			}
+
 		</style>
 	</head>
 
@@ -28,6 +36,7 @@
 		<header class="mui-bar mui-bar-nav title" style="position: fixed;">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left title-color"></a>
 			<h1 class="mui-title title-color"><b id="chatting-nickname">“ 麻 雀 ” 聊 天</b></h1>
+			<h1 id="friend-details" class="title-color">好友信息</h1>
 		</header>
 
 		<div id="msg-outter" class="mui-content">
@@ -40,8 +49,6 @@
 					<textarea id="msg-text" class="mui-input-speech mui-input-clear"></textarea>
 				</div>
 			</div>
-
-			<!-- <textarea id='msg-text' type="text" class='input-text mui-input-speech mui-input-clear'></textarea> -->
 
 			<label class="footer-right">
 				<button type="button" class="mui-btn mui-btn-grey" id="send">发送</button>
@@ -57,6 +64,17 @@
 			mui.ready(function() {
 				mui('.mui-input-row textarea').input();
 			});
+			//动态设置好友信息
+			document.getElementById("friend-details").addEventListener("tap",function(){
+
+				mui.openWindow({
+					url: "friend-details.html",
+					id: "friend-details"+friendUserId,
+					extras: {
+						friendUserId: friendUserId,
+					}
+				});
+			})
 			mui.plusReady(function() {
 				//获取全局用户信息
 				var me = app.getUserGlobalInfo();
@@ -70,6 +88,7 @@
 				friendUserId = chattingWebview.friendUserId;
 				friendNickname = chattingWebview.friendNickname;
 				friendFaceImage = chattingWebview.friendFaceImage;
+
 				//动态设置标题栏好友昵称
 				document.getElementById("chatting-nickname").innerHTML = friendNickname;
 				//初始化聊天记录
