解决聊天页面返回联系人页面问题

--- a/ChatFront/pages/bird-chatting.html
+++ b/ChatFront/pages/bird-chatting.html
@@ -79,7 +79,7 @@
 			})
 			//设置返回按钮事件
 			document.getElementById("back").addEventListener("tap",function(){
-				mui.openWindow("bird-contact.html","bird-contact.html"+Math.random()+Math.random());
+				mui.openWindow("index.html","index.html");
 			})
 			mui.plusReady(function() {
 				//获取全局用户信息
