--- a/ChatFront/pages/bird-me.html
+++ b/ChatFront/pages/bird-me.html
@@ -138,7 +138,7 @@
 
 				if (app.isNotNull(faceImage)) {
 					var img_my_face = document.getElementById("img_my_face");
-					img_my_face.src = app.imgServerUrl + faceImage;
+					img_my_face.src = faceImage;
 				}
 			}
 		</script>
