--- a/ChatFront/pages/myqrcode.html
+++ b/ChatFront/pages/myqrcode.html
@@ -56,12 +56,12 @@
 				//获取需要动态展示内容的组件对象
 				var img_my_qrcode = document.getElementById("img_my_qrcode");
 				if (app.isNotNull(qrcode)) {
-					img_my_qrcode.src = app.imgServerUrl + qrcode;
+					img_my_qrcode.src = qrcode;
 				}
 
 				var img_myface = document.getElementById("img_myface");
 				if (app.isNotNull(userface)) {
-					img_myface.src = app.imgServerUrl + userface;
+					img_myface.src = userface;
 				}
 
 
@@ -80,7 +80,7 @@
 				link_download_qrcode.addEventListener("tap", function() {
 					plus.nativeUI.showWaiting("下载中...");
 					var dtask = plus.downloader.createDownload(
-							app.imgServerUrl + qrcode, {},
+							qrcode, {},
 							function(d, status) {
 								if (status == 200) {
 									plus.nativeUI.closeWaiting();
