--- a/ChatFront/pages/searchFriends.html
+++ b/ChatFront/pages/searchFriends.html
@@ -13,35 +13,53 @@
 		<header class="mui-bar mui-bar-nav title">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<a id="link_submit_search" class="mui-icon mui-icon-right-nav mui-pull-right" style="color: white; font-size: 14px;line-height: 25px;">搜索</a>
-			<h1 class="mui-title title-color">添加好友</h1>
+			<h1 class="mui-title title-color">详细资料</h1>
 		</header>
-		
-		<!-- 主体部分 -->
+
 		<div class="mui-content">
-			<div class="mui-input-row">
-				<input id="txt_friend_username" class="mui-input-speech mui-input-clear" placeholder="搜索好友" type="text">
+			<ul class="mui-table-view">
+				<li class="mui-table-view-cell mui-media">
+					<a href="javascript:;">
+						<img id="img_friend_face" class="mui-media-object mui-pull-left" src="../images/face-cat.jpg" style="border-radius: 5%; line-height: 50px; max-width: 50px; height: 50px;">
+						<div class="mui-media-body">
+							<lable id="lab_friend_nickname">昵称加载中...</lable>
+							<p id="p_friend_username" class="mui-ellipsis">用户名加载中...</p>
+						</div>
+					</a>
+				</li>
+			</ul>
+			<br>
+			<div style="text-align: center;">
+				<button id="btn_add_friend" type="button" class="mui-btn mui-btn-block" style="background-color: #FF4136;color: white;width: 95%; display: inline;padding: 8px 0;">添加好友</button>
 			</div>
 		</div>
-		
-		<script src="../js/mui.js"></script>
+
 		<script src="../js/app.js"></script>
+		<script src="../js/mui.js"></script>
 		<script type="text/javascript">
 			mui.init();
-			
-			mui.plusReady(function () {
-			    //获取全局用户信息
+			mui.plusReady(function() {
+				//获取登录用户的全局信息
 				var user = app.getUserGlobalInfo();
-				//获取搜索框对象
-				var txt_friend_username = document.getElementById("txt_friend_username");
-				//为搜索按钮添加事件
-				document.getElementById("link_submit_search").addEventListener("tap",function(){
-					var friendName = txt_friend_username.value;
-					if(!app.isNotNull(friendName)){
-						app.showToast("请输入要搜索的用户名","error");
-						txt_friend_username.focus();
-					}
+				//获取上一个页面传入的对象，并在此页面进行对应dom元素赋值
+				var currentWebview = plus.webview.currentWebview();
+				//获取传递参数
+				var friend = currentWebview.friend;
+				//获取页面对象
+				var img_friend_face = document.getElementById("img_friend_face");
+				var p_friend_username = document.getElementById("p_friend_username");
+				var lab_friend_nickname = document.getElementById("lab_friend_nickname");
+				var btn_add_friend = document.getElementById("btn_add_friend");
+				//渲染数据
+				if (friend.faceImage != null) {
+					img_friend_face.src = friend.faceImage;
+				}
+				lab_friend_nickname.innerHTML = friend.nickname;
+				p_friend_username.innerHTML = "麻雀号： " + friend.username;
+				//发送添加好友请求
+				btn_add_friend.addEventListener("tap",function(){
 					plus.nativeUI.showWaiting("请稍后...");
-					mui.ajax(app.serverUrl + "/user/searchFriend?myUserId="+user.id+"&friendUserName=" + friendName, {
+					mui.ajax(app.serverUrl + "/user/addFriendRequest?myUserId="+user.id+"&friendUserName=" + friend.username, {
 						timeout: 10000, //超时时间设置为10秒；
 						headers: {
 							'Content-Type': 'application/json'
@@ -50,13 +68,10 @@
 							// 关闭等待框
 							plus.nativeUI.closeWaiting();
 							if (data.status == 200) {
-								txt_friend_username.value='';
+								app.showToast("好友请求已发送");
 								mui.openWindow({
-									url:"searchFriendsResult.html",
-									id:"searchFriendsResult.html",
-									extras:{
-										friend:data.data
-									}
+									url:"index.html",
+									id:"index.html",
 								})
 							} else {
 								app.showToast(data.msg, "error");
@@ -64,6 +79,8 @@
 						}
 					});
 				})
+
+
 			})
 		</script>
 	</body>
